syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service2";
option java_outer_classname = "Service2Impl";

package service2;

// Interface exported by the server.
service Service2 {
  
  rpc service2_do(RequestMessage) returns (ResponseMessage) {}
  rpc getTodo(GetTodoRequestMessage) returns (GetTodoResponseMessage) {}
  rpc getAllTodos(GetAllTodosRequestMessage) returns (GetAllTodosResponseMessage) {}
}

message RequestMessage {
  string text = 1;
}

message GetTodoRequestMessage {
  int32 index = 1;
}

message GetAllTodosRequestMessage {
}

message GetAllTodosResponseMessage {
  int32 status = 1;
  repeated string todos = 2;
  string message = 3;
}

message GetTodoResponseMessage {
  int32 status = 1;
  string text = 2;
  string message = 3;
}

message ResponseMessage {
  string message = 1;
  bool success = 2;
  int32 status = 3;
}

// 2xx
// 200 - OK
// 201  - Created
// 202 - still running
// 204 - no content

// all good - success
// 3xx
// 300 - success data is in another place
// success - data is in another place
// 4xx - wrong input
// 400 - bad input
// 401 - unauthorised
// 404 - resource found
// 5xx - internal server error
// 500 - internal server error